# mytransformers

./: pyproject.toml
transformers/: __init__.py
transformers/core/: positional_encoding.py
transformers/vanilla/: __init__.py  _head_splitter.py  _heads_combiner.py  attention.py  decoder.py  encoder.py  multi_head_attention.py  position_wise_feed_forward_network.py  positional_encoding.py  pretaining.py  struct.txt  vanilla.py  vanilla_transformer.py
transformers/vanilla_JAX/: __init__.py  multi_head_attention.py  position_wise_feed_forward_network.py  positional_encoding.py
